[project]
name = "comfyui-lora-tag-hash-metadata"
description = "ComfyUI node that converts <lora:name:weight> tags into Civitai-friendly Name:HASH:Weight metadata strings."
version = "1.0.1"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/PBandDev/comfyui-lora-tag-hash-metadata"

[tool.comfy]
PublisherId = "pbanddev"
DisplayName = "LoRA Tag Hash Metadata"
Icon = "https://raw.githubusercontent.com/PBandDev/comfyui-lora-tag-hash-metadata/main/assets/icon.svg"
requires-comfyui = ">=0.3.0"
includes = ['dist/']

[tool.bumpversion]
current_version = "1.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release version {new_version}"
message = "chore: bump version to {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/index.ts"
search = 'Version {current_version}'
replace = 'Version {new_version}'

[dependency-groups]
dev = ["pytest>=9.0.2"]
